--- a/index.html
+++ b/index.html
@@ -9,11 +9,20 @@
     <body>
         <main class="computer">
             <section class="views">
-
+                <iframe id="dock" style="visibility: hidden;" class="view" src=""></iframe>
+                <iframe id="browser" class="view" src="https://browser.adarshrkumar.dev"></iframe>
+                <iframe id="mail" class="view" src="https://mail.google.com"></iframe>
+                <iframe id="drive" class="view" src="https://drive.google.com"></iframe>
+                <iframe id="docs" class="view" src="https://docs.google.com"></iframe>
+                <iframe id="sheets" class="view" src="https://sheets.google.com"></iframe>
+                <iframe id="slides" class="view" src="https://slides.google.com"></iframe>
+                <iframe id="forms" class="view" src="https://forms.google.com"></iframe>
+                <iframe id="sites" class="view" src="https://sites.google.com"></iframe>
+                <iframe id="keep" class="view" src="https://keep.google.com"></iframe>
             </section>
-            <div class="dock">
-                
-            </div>
+            <img class="dock" src="imgs/dock.png" alt="The Dock">
+            <input type="checkbox" id="launchpad" class="action-btn">
         </main>
+        <script src="script.js"></script>
     </body>
 </html>
