--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
                 <iframe id="sites" class="view" src="https://sites.google.com"></iframe>
                 <iframe id="keep" class="view" src="https://keep.google.com"></iframe>
             </section>
-            <img class="dock" src="imgs/dock.png" alt="The Dock">
-            <input type="checkbox" id="launchpad" class="action-btn">
+            <section class="dock">
+                <img class="dock-img" src="imgs/dock.png" alt="The Dock">
+                <input type="checkbox" id="launchpad" class="action-btn">
+            </section>
         </main>
         <script src="script.js"></script>
     </body>
