--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <iframe id="forms" class="view" src="https://forms.google.com"></iframe>
                 <iframe id="sites" class="view" src="https://sites.google.com"></iframe>
                 <iframe id="keep" class="view" src="https://keep.google.com"></iframe>
+                <label class="background-block" for="launchpad"></label>
             </section>
             <section class="dock">
                 <img class="dock-img" src="imgs/dock.png" alt="The Dock">
